# ArduinoRC

./: .gitignore  2차 프로젝트_기술서 1조.hwp  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.A38B692D7A9E6E78.idx  main.cpp.AB55FEBBAC2A6832.idx
src/: jetson-esp32.cpp  main.cpp
src/Camera/: Camera.ino
src/ESP32/: CMakeLists.txt  main.c
src/MOTOR_X4_REAL/: MOTOR_X4_REAL.ino
test/MOTOR/: MOTOR.ino
